fixed margin spacing between carousel and header

--- a/index.css
+++ b/index.css
@@ -195,12 +195,15 @@ nav-link {
 
 /* Carousel */
 .carousel {
-    padding: 20px;
+    padding: 10px;
+    padding-top: 100px;
     perspective: 500px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
+    bottom: absolute;
+
   }
   .carousel > * {
     flex: 0 0 auto;
@@ -224,7 +227,7 @@ nav-link {
   .carousel nav {
     display: flex;
     justify-content: center;
-    margin: 20px 0 0;
+    margin: 10px 0 0;
   }
   .carousel nav button {
     flex: 0 0 auto;
@@ -234,5 +237,5 @@ nav-link {
     background: none;
     border: 1px solid;
     letter-spacing: 1px;
-    padding: 5px 10px;
+    padding: 5px 50px;
   }
